--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.10",
     "vue": "^3.5.13"
   },
   "devDependencies": {
